--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p><% codeList.forEach(code => {
+      %>
+      <%= code.title %> <br>
+      <%= code.code %> <br>
+      <%
+    }) %></p>
   </body>
 </html>
