--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <a href="/markdown">markdown page</a>
-    <p><% codeList.forEach(code => {
-      %>
-      <%= code.title %> <br>
-      <%= code.code %> <br>
+
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <style>
+    select {
+      width: 40%;
+      height: 50px;
+    }
+
+    button {
+      width: 60%;
+      height: 50px;
+    }
+  </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>
+    function copy() {
+      let index = $("#slt_index").val();
+      let type = $("#slt_type").val();
+
+      copyText(index, type);
+
+      if (type == "code") {
+        $("#slt_type").val("title").prop("selected", true);
+      } else {
+        $("#slt_index").val(Number(index) + 1).prop("selected", true);
+        $("#slt_type").val("code").prop("selected", true);
+      }
+
+    }
+
+    function copyText(index, type) {
+      var obj = $("#" + index + " > " + "." + type)[0];
+      var range = document.createRange();
+      range.selectNode(obj.childNodes[0]); //텍스트 정보를 Range 객체에 저장
+      var sel = window.getSelection();
+      sel.removeAllRanges(); //기존 선택정보 삭제
+      sel.addRange(range); //텍스트 정보 선택
+      document.execCommand("copy"); //복사
+      sel.removeRange(range); //선택 정보 삭제
+    }
+  </script>
+</head>
+
+<body>
+  <p>
+    <select id="slt_index">
+      <% 
+      for(let i = 1; i <= codeList.length; i++){
+        %>
+      <option value="<%= i %>"><%= i %></option>
       <%
-    }) %></p>
-  </body>
+    }
+    %>
+    </select>
+    <select id="slt_type">
+      <option value="code">
+        code
+      </option>
+      <option value="title">
+        title
+      </option>
+    </select>
+  </p>
+  <button type="button" onclick="copy()">copy</button>
+  <div>
+    <% codeList.forEach(function(code, index) {
+      %>
+    <p id="<%= index + 1 %>">
+      <span class="title"><%= code.title %></span> <br>
+      <span class="code"><%= code.code %></span>
+    </p>
+    <%
+    }) %>
+  </div>
+  <a href="/markdown">markdown generator</a>
+</body>
+
 </html>
